--- a/OracleJETApplication-V-2/views/profile.html
+++ b/OracleJETApplication-V-2/views/profile.html
@@ -21,7 +21,7 @@
     <div class="mainContentArea">
         <div class="oj-flex oj-flex-items-pad" data-bind="if: router.stateId()">
             <div id="profileTabSection" class="oj-flex-item" data-bind="with: router.currentState()">
-                <div data-bind="template: {name: 'labor-management/' + id +'/' + id + '-small'}"></div>
+                <div data-bind="template: {name: 'profile/' + id +'/' + id + '-small'}"></div>
             </div>
         </div>
     </div>
