updated to add user to header

--- a/OracleJETApplication-V-2/views/header.html
+++ b/OracleJETApplication-V-2/views/header.html
@@ -113,6 +113,7 @@
     </div>
     <div class="oj-flex" data-bind="css: $root.router.stateId() + 'TitleWrap'">
         <h1 data-bind="text: $root.pageTitle" class="pageTitle"></h1>
+        <div data-bind="text: $parent.userData().name"></div>
     </div>
 </script>
 <!-- oj-row -->
