--- a/OracleJETApplication-V-2/views/off-canvas-template-top.html
+++ b/OracleJETApplication-V-2/views/off-canvas-template-top.html
@@ -1,23 +1,38 @@
 <div id="offCanvasScope">
     <div id="vtabs" data-bind="ojComponent:{component: 'ojTabs', orientation: 'vertical'}">
         <ul class="regionReportUl">
-          <li class="regionReportLi"><span>Favorites</span></li>
-          <li class="regionReportLi"><span>Recently Viewed</span></li>
-          <li class="regionReportLi"><span>Browse</span></li>
-          <li class="regionReportLi"><span>Search</span></li>
+            <li class="regionReportLi"><span>Favorites</span></li>
+            <li class="regionReportLi"><span>Recently Viewed</span></li>
+            <li class="regionReportLi"><span>Browse</span></li>
+            <li class="regionReportLi"><span>Search</span></li>
         </ul>
         <div id="tabs-1" class="regionTabSections">
-             <p>Vertical Tab 1.</p>
-        </div>
+            <p>Vertical Tab 1.</p>
+            <!-- ko foreach: $root.userData().assignedLocations-->
+            <div class="oj-flex analyticsWrapper" data-bind="click: $root.showItemIndex">
+                <div class="analyticsRegion" data-bind="text: region"></div>
+                <div class="analyticsStore" data-bind="text: name"></div>
+                <div class="analyticsCity" data-bind="text: cityname"></div>
+                <div class="analyticsTotalgreen oj-md-12">
+                        <span class="dailySalesLabel">Daily Sales:</span> <span data-bind="text: dailySales"></span>
+                        <i class="fa fa-arrow-circle-o-up"></i>
+                </div>
+                <div class="analyticsTotalred oj-flex-item">
+                        <span class="dailyLaborCostLabel">Daily Labor Cost:</span> <span data-bind="text: laborCosts"></span>
+                        <i class="fa fa-arrow-circle-o-down"></i>
+                </div>
+            </div>
+             <!-- /ko -->
 
+        </div>
         <div id="tabs-2" class="regionTabSections">
             <p>Vertical Tab 2.</p>
         </div>
-        
+
         <div id="tabs-3" class="regionTabSections">
             <p>Vertical Tab 3.</p>
         </div>
-        
+
         <div id="tabs-4" class="regionTabSections">
             <p>Vertical Tab 4.</p>
         </div>
