--- a/OracleJETApplication-V-2/views/profile.html
+++ b/OracleJETApplication-V-2/views/profile.html
@@ -55,4 +55,4 @@
 </script>
 
 
-<div id="templateWrapper" data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
+<div id="templateWrapper2" data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
