updated ids for routing

--- a/OracleJETApplication-V-2/views/enterprise.html
+++ b/OracleJETApplication-V-2/views/enterprise.html
@@ -21,7 +21,7 @@
     <div class="mainContentArea">
         <div class="oj-flex oj-flex-items-pad" data-bind="if: router.stateId()">
             <div id="enterpriseTabSection" class="oj-flex-item" data-bind="with: router.currentState()">
-                <div data-bind="template: {name: 'gift-loyalty/' + id +'/' + id + '-small'}"></div>
+                <div data-bind="template: {name: 'enterprise/' + id +'/' + id + '-small'}"></div>
             </div>
         </div>
     </div>
