--- a/OracleJETApplication-V-2/views/header.html
+++ b/OracleJETApplication-V-2/views/header.html
@@ -49,9 +49,25 @@
                               }" aria-label="Choose only one navigation element">
         </div>
     </div>
-    <div class="oj-flex mobileTitle oj-sm-only-hide" data-bind="css: $root.router.stateId() + 'TitleWrap'">
-        <h1 data-bind="text: $root.pageTitle" class="pageTitle"></h1>
+    <div data-bind="if: $root.router.stateId() == 'people'">
+        <div id="peopleNavList" class="oj-flex">
+            <div class="oj-flex-item">
+                <h1 class="inlineHeader"><span class="fa fa-users"></span> People <span class="fa fa-question custom-question-icon"></span> </h1>
+            </div>
+            <div class="oj-flex-item">
+<!--            <a href="index.html?root=add-employee" class="basic-btn-link">Add</a>-->
+                <a href="" data-bind="click: function(){handleOpen('#addEmpStatusDialog');}" class="basic-btn-link"><span class="fa fa-plus"></span> Add</a>
+            </div>
+            
+
+        </div>
     </div>
+    <div data-bind="ifnot:$root.router.stateId() == 'people'">
+        <div class="oj-flex mobileTitle oj-sm-only-hide" data-bind="css: $root.router.stateId() + 'TitleWrap'">
+            <h1 data-bind="text: $root.pageTitle" class="pageTitle"></h1>
+        </div>
+    </div>
+
 </script>
 <!-- large template -->
 <script type="text/html" id="lg_xl_header_template">
