--- a/OracleJETApplication-V-2/views/people.html
+++ b/OracleJETApplication-V-2/views/people.html
@@ -1,17 +1,25 @@
 <!-- small template -->
 <script type="text/html" id="sm_template">
-  <div id="peopleNavList" class="oj-flex mobileSubNav" >
-        
-    </div>
+
    <div class="mainContentArea">
          <div class="oj-flex oj-flex-items-pad">
-            <div id="peopleSection" class="oj-flex-item">
+<!--            <div id="peopleSection" class="oj-flex-item">
                 <a data-bind="click: function(){$root.handleOpen('#peopleDialogWindow')}" style="line-height:39px;">edit <i class="fa fa-pencil-square-o"></i></a>
         
-            </div>
+            </div>-->
+            <!--Use template when parent js file is associated by default to the tmpl file
+            Ex. below links to partial tmpl file, people tmpl file already associated with people.js file
+            -->
+
+            <div data-bind="template: {name: 'partials/employee-search/employee-search-small'}"></div>
         </div>
     </div>
     <!--people dialog modal-->
+    <!--Using large template until mobile is provided-->
+    <div data-bind="ojModule: {
+                    name: 'partials/add-employee-modal',
+                    viewName: 'partials/add-employee-modal/add-employee-modal-small'}">
+    </div>
     <div data-bind="template: {name: 'people/dialogwindow/dialogwindow-small'}"></div>
 </script>
 
