adding people.scss

--- a/OracleJETApplication-V-2/scss/oj-override.scss
+++ b/OracleJETApplication-V-2/scss/oj-override.scss
@@ -577,7 +577,7 @@ html:not([dir="rtl"]) .oj-dialog-title{
         }
     }
 }
-
+@import "people.scss";
 //Media Query
 //Medium/ipad (UP)
 @media only screen and (min-width: 768px){
