people search update

--- a/OracleJETApplication-V-2/views/partials/employee-search/employee-search-small.html
+++ b/OracleJETApplication-V-2/views/partials/employee-search/employee-search-small.html
@@ -13,7 +13,7 @@
                     <hr class="oj-flex-item" />
                 </div>
                 <div class="oj-flex">
-                    <div class="oj-flex-item">
+                    <div class="oj-flex-item peopleSearchWrapper">
                          <label for="payrollid">Payroll ID</label>
                          <input id="payrollid" data-bind="ojComponent: {component: 'ojInputText', value:'', help: {definition: helpDef()}}">
 
@@ -39,7 +39,7 @@
                 <div class="oj-flex-item">
                     <div id="employee-search-accordion" data-bind="ojComponent: {component: 'ojAccordion'}">
                         <div id="c1">
-                            <span>Status <span class="fa fa-plus"></span></span>
+                            <span>Status</span>
                             <div>
                                 <div id="checkboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
                                                               component: 'ojCheckboxset',
@@ -60,7 +60,7 @@
                             </div>
                         </div>
                         <div id="c2">
-                            <span>More Options <span class="fa fa-plus"></span></span>
+                            <span>More Options</span>
                             <div>
                                 <div id="checkboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
                                                               component: 'ojCheckboxset',
