--- a/OracleJETApplication-V-2/views/partials/employee-basic-info-modal/employee-basic-info-modal-large.html
+++ b/OracleJETApplication-V-2/views/partials/employee-basic-info-modal/employee-basic-info-modal-large.html
@@ -1,1 +1,36 @@
-large
+<div style="display:none;" id="empBasicDialogWindow" data-bind="ojComponent:{
+            component: 'ojDialog',
+            resizeBehavior: 'none',
+            dragAffordance: 'none',
+            initialVisibility: 'hide', 
+            rootAttributes: {class: 'dialog-dimensions'}, 
+            'position': {'at': 'center'}}"
+     <!-- Note: the user must provide the aria-labelledby attribute for the dialog to be accessible -->
+    <div class="oj-dialog-header oj-helper-clearfix" aria-labelledby="dialogTitleId">
+        <div id="dialogTitleId" class="oj-dialog-title">
+             <h2 class="dialogHeaderText oj-flex">
+                 <img data-bind="attr:{src: 'css/images/header-icon-dialog.png'}" /> 
+                <span id="dialogTitleId">
+                    <span data-bind="text: basicEmpInfo().firstName"></span>
+                    <span data-bind="text: basicEmpInfo().lastName"></span>
+                    <button id="submitButton" data-bind="click:loadPersonPage">Full Details</button>
+                </span>
+             </h2>
+        </div>
+    </div> 
+    <div class="oj-dialog-body">
+      <!--        <div class="oj-flex">
+                <div class="alertMsgWrap oj-flex-item">
+                     <div class="alertMsgText">
+                         <i class="fa fa-check"></i> Order i15-02095 has been successfully submitted
+                     </div>
+                 </div>-->
+        <div class="oj-flex">
+            <div class="oj-flex-item"><img data-bind="attr: {src: getPhoto(basicEmpInfo().empId)}"/></div>
+            <div class="oj-flex-item" data-bind="text: basicEmpInfo().phone"></div>
+            <div class="oj-flex-item" data-bind="text: basicEmpInfo().title"></div>
+        </div>
+             </div>
+         </div>
+     </div>
+</div>
