--- a/OracleJETApplication-V-2/scss/oj-override.scss
+++ b/OracleJETApplication-V-2/scss/oj-override.scss
@@ -242,7 +242,7 @@ a{
 }
 
 //General Header Tags
-h1, h2, h3, h4, h5, h6{
+h1, h2{
     font-family: 'Helvetica Neue Light';
     font-weight: normal;
     color: $headerTextColor;
