--- a/OracleJETApplication/templates/profile.tmpl.html
+++ b/OracleJETApplication/templates/profile.tmpl.html
@@ -166,7 +166,7 @@
                 
         </div>
         <div class="float-r">
-            <button class="editButton" data-bind="click: function(){$parent.handleOpen('#empDialog')}">edit <i class="fa fa-pencil-square-o"></i></button>
+            <button class="editButton" data-bind="click: function(){$parent.handleOpen('#profileDialogWindow')}">edit <i class="fa fa-pencil-square-o"></i></button>
         </div>
     </div>
 </div>
