--- a/OracleJETApplication/templates/profile/profile/profile-small.tmpl.html
+++ b/OracleJETApplication/templates/profile/profile/profile-small.tmpl.html
@@ -128,7 +128,7 @@
              <a style="line-height:39px;" data-bind="attr:{href: 'index.html?root=people'}"><i class="fa fa-arrow-circle-left"></i> back to search</a>
         </div>
         <div class="oj-col oj-sm-3">
-            <a data-bind="click: $parent.handleOpen('#empDialog')" style="line-height:39px;">edit <i class="fa fa-pencil-square-o"></i></a>
+            <a data-bind="click: $parent.handleOpen('#profileDialogWindow')" style="line-height:39px;">edit <i class="fa fa-pencil-square-o"></i></a>
         </div>
     </div>
     </div>
