--- a/OracleJETApplication-V-2/views/profile/profile/profile-large.html
+++ b/OracleJETApplication-V-2/views/profile/profile/profile-large.html
@@ -1,1 +1,235 @@
-<span data-bind="text: $parent.firstName() + ' ' + $parent.lastName()"></span>
+<div class="oj-flex">
+
+    <div class="oj-flex-item">
+
+        <h3>General</h3>
+
+        <div class="oj-flex">
+
+            <div class="oj-flex-item">
+
+                <div>
+
+                    <h4>Name</h4>
+
+                    <span data-bind="text: $parent.firstName() + ' ' + $parent.lastName()"></span>
+
+
+
+                </div>
+
+
+
+                <!--                <div data-bind="visible: $parent.posCheckName()">
+
+                        <h4>POS Check Name <a href="#"><i class="fa fa-question-circle"></i></a></h4>
+
+                        <div data-bind="text: $parent.posCheckName()"></div>
+
+                    </div>-->
+
+                <div>
+
+                    <h4>Language</h4>
+
+                    <span data-bind="text: $parent.language()"></span>
+
+                </div>
+
+                <div>
+
+                    <h4>Time Zone</h4>
+
+                    <div data-bind="text: $parent.timeZone()"></div>
+
+                </div>
+
+                <div>
+
+                    <h4>Ethnicity</h4>
+
+                    <div data-bind="text: $parent.ethnicity()"></div>
+
+                </div>
+
+                <div>
+
+                    <h4>Gender</h4>
+
+                    <div data-bind="text: $parent.gender()"></div>
+
+                </div>
+
+            </div>
+
+            <div class="oj-flex-item ">
+
+                <!--
+
+                    <h4>Profile Picture</h4>
+
+                    Not hooked up to an observable this may need to be an upload feature
+
+                    <img data-bind="attr: {src: $parent.getPhoto($parent.personProfile().empId)}" />-->
+
+
+
+
+
+                <!--doesn't update on modal change, need to work on this-->
+
+                <div data-bind="visible: $parent.veteranStatus() == 'yes'">
+
+                    <h4>Veteran</h4>
+
+                    <!--                <div><span class="veteranStatus">A Veteran?</span> <span data-bind="text: $parent.veteranStatus()"></span></div>-->
+
+                    <div><i class="fa fa-check"></i> <span data-bind="text: $parent.vietnamEra()"></span></div>
+
+                    <div><i class="fa fa-check"></i> <span data-bind="text: $parent.otherEligible()"></span></div>
+
+                    <div><i class="fa fa-check"></i> <span data-bind="text: $parent.otherProtected()"></span></div>
+
+                    <div><i class="fa fa-check"></i> <span data-bind="text: $parent.armedForcesServiceMedal()"></span></div>
+
+                    <div><i class="fa fa-check"></i> <span data-bind="text: $parent.recentlySeparated()"></span></div>
+
+                    <div><i class="fa fa-check"></i> <span data-bind="text: $parent.specialDisabled()"></span></div>
+
+
+
+                    <h4>Registered Disable Number</h4>
+
+                    <div data-bind="text: $parent.registeredDisabledNumber()"></div>
+
+
+
+                    <h4>Discharge Date</h4>
+
+                    <div data-bind="text: $parent.dischargeDate()"></div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
+    <div class="oj-flex-item">
+
+        <h3>Contact</h3>
+
+<div class="oj-flex">
+
+            <div class="oj-flex-item">
+
+                <div class="contactColumn">
+
+                    <h4>Email Address</h4>
+
+                    <a style="font-weight: bold;" data-bind="attr:{href: $parent.getEmail($data)}, text: $parent.email()"></a><i class="fa fa-envelope"></i>
+
+                    <div data-bind="visible: $parent.receiveEmailNotification() == 1">
+
+                        <div><i class="fa fa-check"></i> Receive email notifications</div>
+
+                    </div>
+
+                </div>
+
+                <h4>Phone Number</h4>
+
+                <div data-bind="text: $parent.phone()"></div>
+
+                <div data-bind="visible: $parent.receiveTextNotification() == 1">
+
+                    <div><i class="fa fa-check"></i> Receive text notifications</div>
+
+                </div>
+
+                <div data-bind="visible: $parent.publishInCompanyDirectory() == 1">
+
+                    <div><i class="fa fa-check"></i> Publish in company directory</div>
+
+                </div>
+
+                <div>
+
+                    <h4>Other Phone Number</h4>
+
+                    <div data-bind="text: $parent.mobile()"></div>
+
+                </div>
+
+
+
+                <div data-bind="visible: $parent.faxNumber()">
+
+                    <h4>FAX Number</h4>
+
+                    <div data-bind="text: $parent.faxNumber()"></div>
+
+                </div>
+
+                <h4>Address</h4>
+
+                <div data-bind="text: $parent.address1()"></div>
+
+                <div data-bind="text: $parent.address2()"></div>
+
+                <span data-bind="text: $parent.city()"></span>
+
+                <span data-bind="text: $parent.state()"></span>
+
+                <span data-bind="text: $parent.postal()"></span>
+
+                <span data-bind="text: $parent.country()"></span>
+
+                <div data-bind="visible: $parent.inCityLimits() == 1">
+
+                    <div><i class="fa fa-check"></i> In city limits</div>
+
+                </div>
+
+            </div>
+
+            <div class="oj-flex-item">
+
+                <div>
+
+                    <h4>Emergency Contact</h4>
+
+                    <div data-bind="html: $parent.emergencyName()"></div>
+
+                    <div data-bind="html: $parent.formattedRelationship()"></div>
+
+                    <div data-bind="html: $parent.emergencyAddress()"></div>
+
+                    <span data-bind="html: $parent.emergencyCity()"></span>
+
+                    <span data-bind="html: $parent.emergencyState()"></span>
+
+                    <span data-bind="html: $parent.emergencyZipCode()"></span>
+
+                    <div data-bind="html: $parent.emergencyPhone()"></div>
+
+                </div>
+
+            </div>
+</div>
+
+    </div>
+
+</div>
+<div class="oj-flex">
+    <h3>Custom</h3>
+
+    <div class="oj-col oj-md-12 oj-lg-text-align-end">
+        <a data-bind="attr:{href: 'index.html?root=people'}">back to search <i class="fa fa-arrow-circle-right"></i></a>
+    </div>
+</div>
+<div class="oj-col oj-sm-3">
+    <a data-bind="click: $parent.handleOpen('#profileDialogWindow')" style="line-height:39px;">edit <i class="fa fa-pencil-square-o"></i></a>
+</div>
+<div data-bind="template: {name: 'partials/employee-edit-modal/employee-edit-modal-large'}"></div>
