--- a/OracleJETApplication/templates/profile/analytics/analytics-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/analytics/analytics-large.tmpl.html
@@ -4,7 +4,7 @@
             <h2 id="currentPage" data-bind="text: label"></h2>
         </div>
         <div class="oj-col oj-md-2 oj-lg-text-align-end">
-            <div data-bind="click: function(){$parent.handleOpen('#empDialog')}" style="line-height:39px;">Edit</div>
+            <div data-bind="click: function(){$parent.handleOpen('#profileDialogWindow')}" style="line-height:39px;">Edit</div>
         </div>
     </div>
     <div class="oj-row">
