--- a/OracleJETApplication/templates/profile/analytics/analytics-small.tmpl.html
+++ b/OracleJETApplication/templates/profile/analytics/analytics-small.tmpl.html
@@ -4,7 +4,7 @@
             <a style="line-height:39px;" data-bind="attr:{href: 'index.html?root=people'}">Back to Search</a>
         </div>
         <div class="oj-col oj-sm-2 oj-lg-text-align-end">
-            <div data-bind="click: function(){$parent.handleOpen('#empDialog')}" style="line-height:39px;">Edit</div>
+            <div data-bind="click: function(){$parent.handleOpen('#profileDialogWindow')}" style="line-height:39px;">Edit</div>
         </div>
     </div>
     <div class="oj-row">
